<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.lakshayswani.virtuastock.fragments.AccountFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/header_cover_image"
                android:layout_width="match_parent"
                android:contentDescription="@string/cd_profile_pic"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/user_profile_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/header_cover_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-30dp"
                android:elevation="5dp"
                android:padding="5dp"
                android:contentDescription="@string/cd_profile_pic_add"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_account_box_black_24dp" />

            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_cover_image"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:paddingBottom="24dp">


                <ImageView
                    android:id="@+id/logOut"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/cd_logout"
                    android:src="@drawable/ic_exit_to_app_black_24dp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="76dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:contentDescription="@string/cd_username"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:hint="@string/set_username" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_layout"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:contentDescription="@string/cd_new_password"
                    android:padding="20dp"
                    android:hint="@string/new_password" />

                <EditText
                    android:id="@+id/newPasswordConfirm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/cd_new_password_confirm"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:hint="@string/confirm_new_password" />

                <Button
                    android:id="@+id/submitUpdates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/cd_update"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:layout_gravity="center"
                    android:text="@string/submit_updates" />

            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>
</ScrollView>