<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/stock_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:contentDescription="@string/cd_stock_name"
        android:gravity="left|center_vertical" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:textColor="@color/colorAccent"
        android:layout_weight="1"
        android:gravity="right">

        <TextView
            android:id="@+id/bid_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_stock_price"
            android:paddingRight="10sp"
            tools:text="@string/zero" />

        <TextView
            android:id="@+id/change"
            android:background="@drawable/percent_change_pill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:contentDescription="@string/cd_stock_details"
            android:paddingRight="10dp"
            tools:text="@string/zero" />
    </LinearLayout>
</LinearLayout>