<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_height="400dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:weightSum="100">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:contentDescription="@string/cd_stock_web"
            android:background="@android:color/holo_green_dark">

            <WebView
                android:id="@+id/stock_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"></WebView>

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="90">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:contentDescription="@string/cd_close"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v7.widget.CardView>