<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lakshayswani.virtuastock.fragments.TradeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <AutoCompleteTextView
            android:id="@+id/searchStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            android:ems="10"
            android:contentDescription="@string/cd_search_stock"
            android:hint="@string/enter_stock"
            android:padding="10dp" />

        <worldline.com.foldablelayout.FoldableLayout
            android:id="@+id/foldable_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"></worldline.com.foldablelayout.FoldableLayout>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            app:mtf_image="@drawable/ic_account_box_black_24dp"
            app:mtf_openKeyboardOnFocus="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stock_text_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:contentDescription="@string/cd_trade_price"
                    android:text="@string/set_price"
                    android:textSize="10sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <com.rey.material.widget.Slider
                        android:id="@+id/stock_trade_price"
                        style="@style/Material.Widget.Slider.Discrete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:contentDescription="@string/cd_trade_price"
                        android:padding="10dp"
                        app:sl_maxValue="100"
                        app:sl_minValue="0"
                        app:sl_value="0" />

                    <EditText
                        android:id="@+id/stock_trade_price_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:contentDescription="@string/cd_trade_price"
                        android:layout_weight="8"
                        android:inputType="numberDecimal" />

                </LinearLayout>

                <TextView
                    android:id="@+id/stock_text_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/set_quantity"
                    android:contentDescription="@string/cd_trade_quantity"
                    android:textSize="10sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <com.rey.material.widget.Slider
                        android:id="@+id/stock_trade_quantity"
                        style="@style/Material.Widget.Slider.Discrete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:contentDescription="@string/cd_trade_price"
                        android:padding="10dp"
                        app:sl_maxValue="100"
                        app:sl_minValue="0"
                        app:sl_value="0" />

                    <EditText
                        android:id="@+id/stock_trade_quantity_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/zero"
                        android:contentDescription="@string/cd_trade_price"
                        android:inputType="number" />

                </LinearLayout>

            </LinearLayout>

        </com.github.florent37.materialtextfield.MaterialTextField>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/stock_text_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buy"
                android:contentDescription="@string/cd_trade"
                android:textSize="20sp" />

            <com.rey.material.widget.Switch
                android:id="@+id/stock_trade"
                style="@style/Material.Widget.Switch"
                android:contentDescription="@string/cd_trade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:gravity="center" />

            <TextView
                android:id="@+id/stock_text_sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sell"
                android:contentDescription="@string/cd_trade"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/submitTrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="Submit"
            android:contentDescription="@string/cd_trade"
            android:textSize="15sp" />

    </LinearLayout>

</FrameLayout>
</ScrollView>